# sinitres

./: .gitignore  README.md  analyzer.py  pyproject.toml  test_analyzer.py  test_damage_analyzer.py
.github/workflows/: ci.yml
data/: Descriptions_sinistres.csv
