[project]
name = "sinistres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "outlines[transformers]>=0.1.13",
    "pandas>=2.2.3",
    "pydantic>=2.10.5",
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "transformers>=4.48.1",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]




