[project]
name = "sinistres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "setuptools",
    "datasets>=3.2.0",
    "outlines[transformers]>=0.1.13",
    "pydantic>=2.10.5",
    "sentencepiece>=0.2.0",
    "torch==2.6.0",
    "transformers>=4.50.0",
    "bitsandbytes>=0.43.1",
    "accelerate>=0.29.0",
    "flash-attn==2.7.4.post1",
    ]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "pandas-stubs"
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
ignore_missing_imports = true




